be-default_deployment_pg93.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: be-default
  template:
    metadata:
      labels:
        app: be-default
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: be-default
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
