kuard-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      name: kuard
      ports:
        - containerPort: 8080
        #- containerPort: 8001
          name: http
          protocol: TCP
